add settings method to store github api token

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ milestone_reader/assets/*
 milestone_reader/milestone_reader/settings/prod*
 test_setup/*
 docs/*
+*github_api_secrets.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
