--- a/deploy/milestones.conf
+++ b/deploy/milestones.conf
@@ -1,7 +1,9 @@
 WSGIPythonPath /home/ubuntu/code/milestone-reader/milestone_reader:/home/ubuntu/code/milestone-reader/milestone_reader/milestone_reader:/home/ubuntu/.virtualenvs/milestones/lib/python2.7/site-packages
 <VirtualHost *:80>
-        ServerName 54.191.56.66
-        ##ServerAlias www.domain1.com
+        #ServerName localhost
+        #ServerName 54.191.56.66
+        ServerName 54.68.145.91
+        ServerAlias roadmap.iq.harvard.edu
         #WSGIScriptAlias / /home/username/public_html/domain1.com/MyTestProject.wsgi
         WSGIScriptAlias / /var/www/milestones/milestones/wsgi.py
 
