update deploy example

--- a/deploy/milestones.conf
+++ b/deploy/milestones.conf
@@ -4,6 +4,7 @@ WSGIPythonPath /home/ubuntu/code/milestone-reader/milestone_reader:/home/ubuntu/
         #ServerName 54.191.56.66
         ServerName 54.68.145.91
         ServerAlias roadmap.iq.harvard.edu
+        ServerAlias roadmap.datascience.iq.harvard.edu
         #WSGIScriptAlias / /home/username/public_html/domain1.com/MyTestProject.wsgi
         WSGIScriptAlias / /var/www/milestones/milestones/wsgi.py
 
