vagrant works with apache and production settings #1

--- a/deploy/vagrant-centos-milestones.conf
+++ b/deploy/vagrant-centos-milestones.conf
@@ -1,22 +1,13 @@
-WSGIPythonPath /milestone_reader:/milestone_reader/milestone_reader:/root/.virtualenvs/milestones/lib/python2.6/site-packages
-#<VirtualHost *:80>
-        #ServerName localhost
-        #ServerName 54.191.56.66
-#        ServerName 54.68.145.91
-#        ServerAlias roadmap.iq.harvard.edu
-#        ServerAlias roadmap.datascience.iq.harvard.edu
-        #WSGIScriptAlias / /home/username/public_html/domain1.com/MyTestProject.wsgi
-        WSGIScriptAlias / /var/www/milestones/milestones/wsgi.py
+WSGIScriptAlias / /var/www/milestones/milestones/wsgi.py
+WSGIPythonPath /milestone_reader:/milestone_reader/milestone_reader:/webapps/virtualenvs/milestones/lib/python2.6/site-packages
 
+Alias /static/ /var/www/milestones/static/
 
-        #Alias /static/ /home/username/public_html/domain1.com/static/
-        Alias /static/ /var/www/milestones/static/
-        <Location "/static/">    
-            Options -Indexes -FollowSymLinks -MultiViews
-        </Location>
-        
-        Alias /media/ /var/www/milestones/media/
-        <Location "/media/">    
-            Options -Indexes -FollowSymLinks -MultiViews
-        </Location>
-#</VirtualHost>
+<Location "/static/">
+    Options -Indexes -FollowSymLinks -MultiViews
+</Location>
+
+Alias /media/ /var/www/milestones/media/
+<Location "/media/">
+    Options -Indexes -FollowSymLinks -MultiViews
+</Location>
